--- a/AndroidBienchen/AndroidManifest.xml
+++ b/AndroidBienchen/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <receiver android:name=".ImageFetcherTimer" />
         <activity
             android:name="de.androidbienchen.StartMenuActivity"
             android:label="@string/app_name" >
