--- a/AndroidBienchen/project.properties
+++ b/AndroidBienchen/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library=false
-android.library.reference.1=../Caldroid-eclipse_project/library
+android.library.reference.1=../../Caldroid-eclipse_project/Caldroid-eclipse_project/library
