--- a/AndroidBienchen/.classpath
+++ b/AndroidBienchen/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="/Users/aylasybille/Documents/workspace/Android_Bienchen/Parse-1/Parse-1.5.1.jar"/>
+	<classpathentry kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/Android_Bienchen/Parse-1/Parse-1.5.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
