--- a/AndroidBienchen/.classpath
+++ b/AndroidBienchen/.classpath
@@ -3,10 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="src" path="/android-support-v7-appcompat"/>
-	<classpathentry exported="true" kind="src" path="/library"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/Android_Bienchen/Parse-1/Parse-1.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/Android_Bienchen/Parse-1/Parse-1.5.1.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/library"/>
+	<classpathentry exported="true" kind="lib" path="libs/GraphView-3.1.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
