--- a/AndroidBienchen/.classpath
+++ b/AndroidBienchen/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/Android_Bienchen/Parse-1/Parse-1.5.1.jar"/>
 	<classpathentry kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/Android_Bienchen/Caldroid-eclipse_project/library/libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Studium/Medieninformatik/Android/Abschlussprojekt/GraphView-3.1.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
