--- a/AndroidBienchen/.classpath
+++ b/AndroidBienchen/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/GraphView-3.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/Parse-1.5.1.jar"/>
+	<classpathentry kind="lib" path="libs/socketio.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/google-play-services_lib"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/library"/>
 	<classpathentry kind="output" path="bin/classes"/>
