--- a/AndroidBienchen/AndroidManifest.xml
+++ b/AndroidBienchen/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name="de.androidbienchen.activities.UsernameActivity"
             android:label="@string/app_name" 
+            android:icon="@drawable/wabe"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +35,8 @@
         </activity>
         <activity 
             android:name="de.androidbienchen.activities.MainActivity"
-            android:label="@string/title_activity_presence_status"
+            android:label="@string/app_name"
+            android:icon="@drawable/wabe"
             android:screenOrientation="portrait">
         </activity>
     </application>
